--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ aside#sidebar{
 	width:30%;
 	margin-top:10px;
 }
-aside#sidebar .quote input, side#sidebar .qupte textarea {
+aside#sidebar .quote input, side#sidebar .quote textarea {
 	width:90%;
 	padding:5px;
 }
